# OpenVINS-DL-VIO

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
datasets/: datasets.txt  download_datasets.sh
datasets/euroc_mav/: data.txt
datasets/uzhfpv_indoor/: data.txt
datasets/uzhfpv_outdoor/: data.txt
model/: run_all.py  run_streamer.py
src/alike/: alike_test.cpp
src/alike/include/: alike_common.h
src/alike/src/: alike_common.cpp  dkd.cpp
src/alike_extractor/: CMakeLists.txt  package.xml
src/alike_extractor/include/: alike.h  dkd.h
src/alike_extractor/models/: small_640_480.onnx
src/alike_extractor/src/: alike.cpp
src/config/camera_imu/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
src/config/euroc_mav/: kalibr_imucam_chain.yaml
src/config/uzhfpv_indoor/: estimator_config.yaml  kalibr_imucam_chain.yaml
src/config/uzhfpv_outdoor/: estimator_config.yaml  kalibr_imucam_chain.yaml
src/ov_core/: CMakeLists.txt  package.xml
src/ov_core/cmake/: ROS1.cmake
src/ov_core/src/track/: TrackALike.cpp  TrackALike.h  TrackMix.cpp  TrackMix.h
src/ov_core/src/utils/: sensor_data.h
src/ov_msckf/src/core/: VioManager.cpp  VioManagerOptions.h
src/ov_msckf/src/ros/: ROS1Visualizer.cpp
