<?xml version="1.0"?>
<package format="2">

  <name>alike_extractor</name>
  <version>1.0.0</version>
  <description>C++ Package of ALike solution for keypoint detection along with feature extraction.</description>

  <maintainer email="naumenko.roman2003@gmail.com">Roman Naumenko</maintainer>
  <author email="naumenko.roman2003@gmail.com">Roman Naumenko</author>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>

</package>